<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/inputResult"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:gravity="center|end"
            android:hint="@string/ResultPlaceholder"
            android:textColorHint="#78909C"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/inputExpression"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/ExpressionPlaceholder"
            android:inputType="textPersonName"
            android:textColorHint="#78909C" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonClear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_span="3"
                android:minWidth="88dp"
                android:minHeight="88dp"
                android:text="@string/OperatorClear"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonDivide"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:minWidth="88dp"
                android:minHeight="88dp"
                android:text="@string/OperatorDivision"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:minWidth="88dp"
                android:minHeight="88dp"
                android:text="@string/NumberOne"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:minWidth="88dp"
                android:minHeight="88dp"
                android:text="@string/NumberTwo"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:minWidth="88dp"
                android:minHeight="88dp"
                android:text="@string/NumberThree"
                android:textSize="34sp" />

            <Button
                android:id="@+id/buttonMultiply"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:minWidth="88dp"
                android:minHeight="88dp"
                android:text="@string/OperatorMultiply"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:minWidth="88dp"
                android:minHeight="88dp"
                android:text="@string/NumberFour"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:minWidth="88dp"
                android:minHeight="88dp"
                android:text="@string/NumberFive"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:minWidth="88dp"
                android:minHeight="88dp"
                android:text="@string/Number6"
                android:textSize="34sp" />

            <Button
                android:id="@+id/buttonPlus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:minWidth="88dp"
                android:minHeight="88dp"
                android:text="@string/OperatorPlus"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:minWidth="88dp"
                android:minHeight="88dp"
                android:text="@string/NumberSeven"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:minWidth="88dp"
                android:minHeight="88dp"
                android:text="@string/NumberEight"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:minWidth="88dp"
                android:minHeight="88dp"
                android:text="@string/NumberNne"
                android:textSize="34sp" />

            <Button
                android:id="@+id/buttonMinus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:minWidth="88dp"
                android:minHeight="88dp"
                android:text="@string/OperatorMinus"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonDot"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:minWidth="88dp"
                android:minHeight="88dp"
                android:text="@string/OperatorDot"
                android:textSize="34sp" />

            <Button
                android:id="@+id/buttonZero"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:minWidth="88dp"
                android:minHeight="88dp"
                android:text="@string/NumberZero"
                android:textSize="34sp" />

            <Button
                android:id="@+id/buttonEquals"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="2"
                android:minWidth="88dp"
                android:minHeight="88dp"
                android:text="@string/OperatorEquals"
                android:textSize="34sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/buttonSecondActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actionButtonSecondActivity" />

    <Button
        android:id="@+id/buttonThirdActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonThirdActivityAction" />
</LinearLayout>